# Trik_Klip

./: .env.example  .gitignore  .graphifyignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  RELEASE_README.md  StreamClipper.jsx  Trik_Klip.spec  Trik_Klip_Qt.spec  clip_finder.py  gui.py  index.html  launch_qt.bat  licensing.py  package-lock.json  package.json  pnpm-lock.yaml  providers.py  requirements.txt  svelte.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: build.md  deploy.md
.github/workflows/: release.yml
assets/: shorts_template_1080x1920.kdenlive
crates/trik-klip-core/: Cargo.toml
crates/trik-klip-core/src/: cancel.rs  chunking.rs  clip_scoring.rs  ffmpeg.rs  lib.rs  licensing.rs  models.rs  prompts.rs  spike_detection.rs  visuals.rs  whisper.rs  whisper_models.rs
crates/trik-klip-core/src/db/: mod.rs  models.rs
crates/trik-klip-core/src/llm/: anthropic.rs  claude_cli.rs  codex_cli.rs  gemini.rs  mod.rs  openai_compat.rs  provider.rs  provider_registry.rs
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
gui_qt/: app.py  license_dialog.py  main_window.py  signals.py  theme.py  workers.py
gui_qt/tabs/: about_tab.py  extract_tab.py  settings_tab.py  slice_tab.py  transcribe_tab.py
gui_qt/widgets/: clip_section.py  drop_zone.py  log_panel.py  progress_panel.py
metrics/: cloc.json  cloc.txt
scripts/: fetch-resources.ps1  sign.ps1  update_metrics.sh
src/: App.svelte  app.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: config.rs  error.rs  kdenlive.rs  mod.rs  pipeline.rs  premiere.rs
src-tauri/src/server/routes/: mod.rs
tests/: test_clip_finder.py  test_gui_helpers.py  test_image_reencoding.py
(+15 files in other folders)
