[package]
name = "trik-klip"
version = "0.1.0"
edition = "2021"
default-run = "trik-klip"

[lib]
name = "trik_klip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "trik-klip"
path = "src/main.rs"

[[bin]]
name = "trik-klip-cli"
path = "src/bin/cli.rs"

[dependencies]
trik-klip-core = { path = "../crates/trik-klip-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sha2 = "0.10"
hex = "0.4"
futures-core = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
